<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.simpleproduct.model.ProductResponse" />

    </data>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            style="@style/match_wrap"
            app:cardCornerRadius="@dimen/dimen_32"
            app:cardElevation="@dimen/dimen_4"
            android:layout_margin="@dimen/margin_small"
            app:cardBackgroundColor="@color/dessert_ash_40">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/match_match">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200"
                android:adjustViewBounds="true"
                android:contentDescription="@string/product_image"
                android:scaleType="fitXY"
                android:transitionName="image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showImage="@{item.image}"
                tools:srcCompat="@drawable/img" />

            <View
                android:id="@+id/horizontalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/ivProduct"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/tvProductName"
                style="@style/zero_wrap"
                android:fontFamily="@font/rubik_bold"
                android:padding="@dimen/padding_small"
                android:text="@{item.product_name}"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLine"
                tools:text="@string/lotion" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/wrap_wrap"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/price"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/tvProductName"
                app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

            <TextView
                android:id="@+id/tvType"
                style="@style/wrap_wrap"
                android:layout_marginStart="@dimen/dimen_80"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/type"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                app:layout_constraintStart_toEndOf="@+id/tvPrice"
                app:layout_constraintTop_toTopOf="@+id/tvPrice" />

            <TextView
                android:id="@+id/tvTax"
                style="@style/wrap_wrap"
                android:layout_marginStart="@dimen/dimen_80"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/tax"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
                app:layout_constraintStart_toEndOf="@+id/tvType"
                app:layout_constraintTop_toTopOf="@+id/tvPrice" />


            <TextView
                android:id="@+id/tvProductPrice"
                style="@style/wrap_wrap"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/rubik_bold"
                android:text="@{item.price.toString()}"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_medium"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@+id/tvPrice"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_small"
                tools:text="149" />

            <TextView
                android:id="@+id/tvProductType"
                style="@style/wrap_wrap"
                android:fontFamily="@font/rubik_bold"
                android:text="@{item.product_type}"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_medium"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="@+id/tvProductPrice"
                app:layout_constraintStart_toStartOf="@id/tvType"
                app:layout_constraintEnd_toEndOf="@id/tvType"
                app:layout_constraintTop_toTopOf="@+id/tvProductPrice"/>

            <TextView
                android:id="@+id/tvProductTax"
                style="@style/wrap_wrap"
                android:fontFamily="@font/rubik_bold"
                android:text="@{item.tax.toString()}"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="@+id/tvProductPrice"
                app:layout_constraintStart_toStartOf="@id/tvTax"
                app:layout_constraintEnd_toEndOf="@id/tvTax"
                app:layout_constraintTop_toTopOf="@+id/tvProductPrice"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>